# aml_monitoring_env

./: .dockerignore  .env.example  .gitignore  BENCHMARKS.md  README.md  __init__.py  _strip_comments.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
agents/: multi_agent.py
data/: __init__.py  customers.py  scenarios.py  transactions.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: Dockerfile  __init__.py  app.py  environment.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_data_generation.py  test_environment.py  test_graders.py
